fixed header alignment and minor adjustments

--- a/src/styles/blocks/button.scss
+++ b/src/styles/blocks/button.scss
@@ -25,9 +25,6 @@
     align-items: center;
     justify-content: center;
     color: white;
-    font-size: 12px;
-    font-weight: 500;
-    line-height: 14.65px;
     box-sizing: border-box;
     width: 100%;
     padding: 16px 37px;
