--- a/src/styles/blocks/menu.scss
+++ b/src/styles/blocks/menu.scss
@@ -7,7 +7,15 @@
   @include page-grid;
   @include padding-inline;
 
-  grid-template-rows: 74px 1fr 1fr 1fr;
+  grid-template-rows: 74px 1fr 1fr;
+
+  @include on-tablet {
+    grid-template-rows: 96px auto;
+  }
+
+  @include on-desktop {
+    grid-template-rows: 108px auto;
+  }
 
   &__top {
     grid-column: 1 / -1;
