--- a/src/styles/blocks/nav.scss
+++ b/src/styles/blocks/nav.scss
@@ -15,7 +15,7 @@
 
   &__link {
     @extend %link;
-    @extend %thirdary-text;
+    @extend %tertiary-text;
 
     @include on-tablet {
       font-size: 22px;
@@ -24,7 +24,7 @@
 
     &:link, &:visited {
       @extend %link;
-      @extend %thirdary-text;
+      @extend %tertiary-text;
     }
     &:hover {
       @extend %h6;
@@ -33,7 +33,7 @@
     }
     &:active {
       @extend %link;
-      @extend %thirdary-text;
+      @extend %tertiary-text;
     }
   }
 }
