--- a/src/styles/blocks/top-bar.scss
+++ b/src/styles/blocks/top-bar.scss
@@ -1,20 +1,21 @@
 .top-bar {
+  display: flex;
   box-sizing: border-box;
   padding-block: 24px;
   justify-content: space-between;
   align-items: center;
 
-  @include page-grid;
+  // @include page-grid;
 
   &__logo {
-    grid-column: 1;
     display: flex;
 
     @include hover(scale, 1.1);
-    
+
     @include on-tablet {
       padding-block: 11px;
     }
+
   }
 
   &__button {
@@ -28,8 +29,6 @@
   }
 
   &__buttons-holder {
-    grid-column-end: -1;
-    justify-self: end;
     display: flex;
     align-items: center;
     gap: 30px;
