--- a/src/styles/utils/_extends.scss
+++ b/src/styles/utils/_extends.scss
@@ -23,7 +23,7 @@
   line-height: 20px;
 }
 
-%thirdary-text {
+%tertiary-text {
   @extend %secondary-text;
 
   text-transform: uppercase;
